<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragments.TheoryFragment">


    <TextView
        android:id="@+id/articleText"
        android:layout_width="389dp"
        android:layout_height="453dp"
        android:layout_marginBottom="12dp"
        android:text="@string/ToRecieveTheArticleUseTheButtonBelow"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/getInfoButton"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/ArticleNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/ArticleNameReplacement"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/articleText"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        android:text="@string/welcome_theory"
        android:textColor="@color/cyan"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ArticleNameText"
        tools:layout_editor_absoluteX="46dp" />

    <Button
        android:id="@+id/getInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/GetInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>