<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.englearn.ui.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_rhyme"
            app:destination="@+id/navigation_rhyme"
            />
        <action
            android:id="@+id/action_home_to_theory"
            app:destination="@+id/navigation_theory"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_rhyme"
        android:name="com.example.englearn.ui.Fragments.RhymeFragment"
        android:label="@string/title_rhyme_generator"
        tools:layout="@layout/fragment_rhyme">
    <action
        android:id="@+id/action_rhyme_to_home"
        app:destination="@+id/navigation_home"
        />
    <action
        android:id="@+id/action_rhyme_to_theory"
        app:destination="@+id/navigation_theory"
        />
    </fragment>

    <fragment
        android:id="@+id/navigation_theory"
        android:name="com.example.englearn.ui.Fragments.TheoryFragment"
        android:label="@string/title_theory"
        tools:layout="@layout/fragment_theory">
        <action
            android:id="@+id/action_theory_to_home"
            app:destination="@+id/navigation_home"
            />
        <action
            android:id="@+id/action_theory_to_rhyme"
            app:destination="@+id/navigation_rhyme"
            />
    </fragment>
</navigation>